# nepal-ttf2utf

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EVIDENCE.md
scripts/: smoke_installed.py  verify_artifacts.py
src/lipantar/: __init__.py  limbu.py
src/nepal_ttf2utf/: ._lepcha.py  __init__.py  __main__.py  _controls.py  cli.py  devanagari.py  jg_lepcha.py  kiratrai.py  lepcha.py  limbu.py  magar_akkha.py  olchiki.py  sunuwar.py  tibetan.py  tirhuta.py  unicode_span.py  videha.py
src/nepal_ttf2utf/maps/: JGLepcha.map  LICENSE.magar-toolkit-MIT.txt  TibetanMachine.csv  __init__.py  olck_optimum.json  sikkim_herald_lepcha.json
tests/: test_api.py  test_artifacts.py  test_cli.py  test_controls.py  test_devanagari.py  test_exact_integer_contracts.py  test_exact_string_contracts.py  test_iterable_contracts.py  test_jg_lepcha.py  test_kiratrai.py  test_lepcha.py  test_limbu.py  test_magar_akkha.py  test_olchiki.py  test_reserved_codepoints.py  test_sunuwar.py  test_tibetan.py  test_tirhuta.py  test_unicode_span.py  test_videha.py  unicode17_gurung_khema_kirat_rai_normalization.json
