[project]
name = "nepal-ttf2utf"
version = "0.1.0"
description = "Legacy ASCII-font to Unicode converter for the scripts of Nepal and its diaspora (Devanagari incl. nayanepal/Gorkhapatra, Limbu/Sirijonga, Kirat Rai, Sunuwar, and Lepcha)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ampixa" }]
keywords = ["nepali", "devanagari", "limbu", "sirijonga", "kirat-rai", "sunuwar", "lepcha", "preeti", "unicode", "legacy-font", "ocr", "nepal", "sikkim"]
dependencies = ["npttf2utf>=0.3"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/Ampixa/nepal-ttf2utf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nepal_ttf2utf"]
